fix: reduce width of map search box on mobile

--- a/src/gis/components/Map.css
+++ b/src/gis/components/Map.css
@@ -3,7 +3,13 @@
 .leaflet-control-container .leaflet-control-geosearch form input {
   font-size: 15px;
   height: 30px;
-  min-width: 300px;
+  min-width: 150px;
+}
+
+@media screen and (min-width: 768px) {
+  .leaflet-control-container .leaflet-control-geosearch form input {
+    min-width: 300px;
+  }
 }
 
 .leaflet-control-geosearch {
